Fixed scrollbar displaying on post-it note description

--- a/src/components/PostIt.css
+++ b/src/components/PostIt.css
@@ -25,7 +25,12 @@
   contain: strict;
   overflow: scroll;
   padding-top: 2px;
-  height: 170px;
+  height: 180px;
+}
+
+.description::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
 }
 
 .category {
